[gd_scene load_steps=3 format=3 uid="uid://dubu1lufic0w1"]

[ext_resource type="Script" path="res://scripts/Reciclagem/GameOver2.gd" id="1_0at1n"]
[ext_resource type="AudioStream" uid="uid://dmcyycbog5kng" path="res://Audio/game-over-38511.mp3" id="2_p57vs"]

[node name="GameOver" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0
script = ExtResource("1_0at1n")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.352941, 0.65098, 0.8, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ColorRect"]
layout_mode = 0
offset_left = 322.0
offset_top = 250.0
offset_right = 480.0
offset_bottom = 367.0
theme_override_constants/separation = 16
alignment = 1

[node name="Score" type="Label" parent="Control/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Score placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JogarNovamente" type="Button" parent="Control/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Jogar novamente"

[node name="VoltarAoMenu" type="Button" parent="Control/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Voltar para o menu"

[node name="Fim_de_jogo" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("2_p57vs")

[connection signal="pressed" from="Control/ColorRect/VBoxContainer/JogarNovamente" to="Control" method="_on_jogar_novamente_pressed"]
[connection signal="pressed" from="Control/ColorRect/VBoxContainer/VoltarAoMenu" to="Control" method="_on_voltar_ao_menu_pressed"]
